k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: akaes-ingress
spec:
  rules:
    - host: alekseinovikov-pi
      http:
        paths:
          - path: /
            backend:
              serviceName: akaes-service
              servicePort: 8080
          - path: /rabbitmq
            backend:
              serviceName: rabbitmq-service
              servicePort: 15672
